--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ gitdb==4.0.11
 GitPython==3.1.42
 idna==3.6
 ipykernel==6.29.4
-ipython==8.22.2
+ipython
 jedi==0.19.1
 Jinja2==3.1.3
 jsonschema==4.21.1
